# socratic

./: .gitignore  main.py  pyproject.toml
backend/: Dockerfile  README.md  advanced-deploy.md  docker-compose.yml  example.env  main.py  pyproject.toml  pytest.ini  setup.cfg
backend/app/: logger.py  main.py  settings.py
backend/app/api/: routers.py
backend/app/api/dependencies/: auth.py  database.py  healthcheck.py
backend/app/api/endpoints/: auth.py  healthcheck.py  users.py
backend/app/caching/: redis_repo.py
backend/app/db/: crud.py  sqlalchemy.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: ee3fca8fac30_create_users_table.py  ffbdf5824ed8_create_users_table.py
backend/app/db/record/: repo.py
backend/app/db/user/: __init__.py  models.py  repo.py
backend/app/resources/: strings.py
backend/app/schemas/: record.py  user.py
backend/app/services/: healthcheck.py  security.py
backend/docs/: environment_variables.md
backend/scripts/: generate_secret_key.py
backend/tests/: conftest.py
backend/tests/api/dependencies/: test_auth.py
backend/tests/commands/: test_common.py
backend/tests/db/user/: test_repo.py
backend/tests/endpoints/: test_auth.py
backend/tests/services/: test_security.py
frontend/src/: App.svelte
