[tool.poetry]
name = "socratic"
version = "0.1.0"
description = ""
authors = ["Alexander Sidorov <sidai@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^15.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
