[tool.poetry]
name = "socratic"
version = "0.1.0"
description = "TODO"
authors = []

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.104.1"
uvicorn = "^0.24.0"

pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

alembic = "^1.12.1"
SQLAlchemy = "^2.0.23"
asyncpg = "^0.28.0"  # DB backend for application

redis = "^5.0.1"

python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

asgi-lifespan = "^2.1.0"
httpx = "^0.25.1"
python-dotenv = "^1.0.0"

black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []
